# projet-ROS2

./: .gitignore  README.txt
install/: local_setup.sh  setup.sh
install/mobile_robot/share/mobile_robot/: package.ps1  package.sh  package.xml
install/mobile_robot/share/mobile_robot/launch/: gazebo_model.launch.py
install/mobile_robot/share/mobile_robot/model/: obstacle_avoidance.py  robot.gazebo  robot.xacro
install/mobile_robot/share/mobile_robot/params/: bridge_parameters.yaml
log/: latest_build
src/mobile_robot/: setup.py
src/mobile_robot/launch/: gazebo_model.launch.py
src/mobile_robot/mobile_robot/: final_robot_config.rviz
src/mobile_robot/model/: robot.gazebo  robot.xacro
