<?xml version="1.0"?>
<package format="3">
  <name>mobile_robot</name>
  <version>0.0.0</version>
  <description>Simulation de mon robot mobile avec LiDAR</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>